Fix centering on mobile

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -38,6 +38,7 @@ body {
     left: 0;
     right: 0;
     margin: 0 auto;
+
     margin-top: 30px;
     width: 320px;
 
@@ -59,6 +60,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+
 }
 
 .sidebar-container-in {
@@ -84,12 +86,6 @@ body {
 }
 
 .button {
-    position: absolute;
-    right: 0;
-
-    margin-top: 30px;
-    margin-right: 30px;
-
     border-radius: 50px;
 
     border: none;
@@ -107,33 +103,33 @@ body {
     background-color: #484848;
 }
 
+#button-container {
+    position: absolute;
+    right: 0;
+    margin-top: 30px;
+    margin-right: 30px;
+    z-index: 3;
+}
+
 #last-position-button {
-    right: 100px;
     width: 150px;
-    border-radius: 20px;
+    margin-right: 20px;
 }
 
 #last-position-button:hover {
     background-color: #484848;
 }
 
-@media screen and (min-width: 320px) and (max-width: 840px) {
+@media screen and (min-width: 0px) and (max-width: 840px) {
 
+    #button-container {
+        margin-left: auto;
+        margin-right: auto;
 
-    #last-position-button {
-        right: 0px;
-        top: 75px;
-        width: 150px;
-        border-radius: 20px;
-    }
-
-    #topbar {
-        position: absolute;
-        left: 0;
         right: 0;
-        margin: 0 auto;
-        margin-top: 30px;
-        width: 320px;
+        left: 0;
+        top: 80px;
+        width: 240px;
     }
 
     #sidebar-container {
@@ -155,7 +151,6 @@ body {
         padding-bottom: 10px;
     }
 
-
     .sidebar-container-in {
         transition: 0.25s;
         right: 0 !important;
@@ -164,10 +159,6 @@ body {
     .sidebar-container-out {
         transition: 0.25s;
         right: -1000px !important;
-    }
-
-    #last-position-button:hover {
-        background-color: #484848;
     }
 }
 
